service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: tileserver-gl-service
# spec:
#   selector:
#     app: tileserver-gl
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 80
#       nodePort: 30000
#   type: NodePort
#   # type: LoadBalancer

---

apiVersion: v1
kind: Service
metadata:
  name: tileserver-gl-service-coastal
spec:
  selector:
    app: tileserver-gl-coastal
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30001
  # type: NodePort
  type: LoadBalancer

---
apiVersion: v1
kind: Service
metadata:
  name: tileserver-gl-service-admin
spec:
  selector:
    app: tileserver-gl-admin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30002
  # type: NodePort
  type: LoadBalancer


---
apiVersion: v1
kind: Service
metadata:
  name: tileserver-gl-service-road
spec:
  selector:
    app: tileserver-gl-road
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30003
  # type: NodePort
  type: LoadBalancer

---
apiVersion: v1
kind: Service
metadata:
  name: tileserver-gl-service-deduce
spec:
  selector:
    app: tileserver-gl-deduce
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30004
  # type: NodePort
  type: LoadBalancer


---
apiVersion: v1
kind: Service
metadata:
  name: tileserver-gl-service-deduce1
spec:
  selector:
    app: tileserver-gl-deduce1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30005
  # type: NodePort
  type: LoadBalancer
